[metadata]
name = gias3.learning
version = attr: src.gias3.learning.__version__
description = Common modules for GIAS3
long_description = file: README.rst, LICENSE.rst
keywords = musculoskeletal, modelling
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
namespace_packages = gias3
package_dir =
    =src
packages = find:
install_requires =
    gias3.common
    gias3.registration
    numpy
    scipy
    scikit-learn

[options.packages.find]
where = src
