[metadata]
name = gias3.learning
version = attr: gias3.learning.__version__
description = Common modules for GIAS3
long_description = file: README.rst
keywords = musculoskeletal, modelling
license = MPL 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
namespace_packages = gias3
package_dir =
    =src
packages = find:
install_requires =
    gias3.common
    gias3.registration
    numpy
    scipy
    scikit-learn
    cython

[options.packages.find]
where = src
